# ps-modules

./: .cspell.json  .editorconfig  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  404.html  AGENTS.md  Makefile  README.md  index.html  install.ps1  mkdocs.yml  module_create.ps1  module_install.ps1  module_manage.ps1  project-words.txt  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml  repo_checks.yml
aliases-git/: index.html
aliases-git/completers/: index.html
aliases-git/conventions/: index.html
aliases-git/gh-aliases/: index.html
aliases-git/git-aliases/: index.html
aliases-git/helpers/: index.html
aliases-git/log/: index.html
aliases-kubectl/: index.html
aliases-kubectl/aliases/: index.html
aliases-kubectl/completers/: index.html
aliases-kubectl/conventions/: index.html
aliases-kubectl/helpers/: index.html
do-az/: index.html
do-az/azure/: index.html
do-az/graph/: index.html
do-common/: index.html
do-common/certs/: index.html
do-common/common/: index.html
do-common/logging/: index.html
do-common/networking/: index.html
do-common/python/: index.html
do-linux/: index.html
do-win/: index.html
docs/: aliases_git.md  aliases_kubectl.md  do_az.md  do_common.md  do_linux.md  do_win.md  index.md
docs/aliases-git/: completers.md  conventions.md  gh-aliases.md  git-aliases.md  helpers.md  index.md  log.md
docs/aliases-kubectl/: aliases.md  completers.md  (+3 more)
psm-windows/: index.html
search/: search_index.json
src/: Functions.ps1  align_tables.py  ps-szymonos.psd1  ps-szymonos.psm1
tests/: pester.ps1
(+60 files in other folders)
